8.work on multi langs 3 + add footer 1

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,30 +57,14 @@
 
 
 
-
-
-  .goog-te-banner-frame.skiptranslate {
-    display: none !important;
-  }
-
-  
-  body {
-    position: "static";
-    top: "0px !important";
-  }
-
- .skiptranslate {
-    display: "none !important";
-  }
-
-
-
 }
 
 
 
 
-
+body > .skiptranslate {
+  display: none;
+}
 
 
 
