9. done multi langs  + done footer 2 + work on contact form 1

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,13 +62,25 @@
 
 
 
-body > .skiptranslate {
+body>.skiptranslate {
   display: none;
 }
 
 
 
+.test {
+  clip-path: polygon(0 30%, 50% 1%, 100% 30%, 100% 70%, 50% 100%, 0 70%);
+  background: pink;
 
+  width: 300px; /* Adjust width and height as needed */
+  height: 300px;
+  border-radius: 50%; /* This makes the wrapper circular */
+  overflow: hidden; /* This ensures the image stays within the circular boundary */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
 
 
 
