38 . work one mongo error 3+ work on home page 3:  done  the best 4 + work one movies sec 1 + work on about sec 1

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,9 +80,58 @@
   }
 
   .galaxy-gradient-border {
-    @apply  bg-gradient-to-tr from-fuchsia-500 to-cyan-500
+    @apply bg-gradient-to-tr from-fuchsia-500 to-cyan-500
+  }
+
+  .galaxy-gradient-half-bg {
+    @apply transition-all duration-300 bg-gradient-to-br from-fuchsia-500/10 to-cyan-500/10
   }
 }
+
+
+
+
+
+
+
+
+
+.container-shape {
+  background-color: #1c2331;
+  color: #fff;
+  padding: 40px 20px;
+  border-radius: 20px;
+  max-width: 500px;
+  margin: 20px auto;
+  text-align: center;
+  font-family: Arial, sans-serif;
+  position: relative;
+  overflow: hidden; /* Ensure that the pseudo-elements don't overflow */
+}
+
+.container-shape::before,
+.container-shape::after {
+  content: '';
+  position: absolute;
+  border-radius: 50%;
+  background-color: rgba(50, 181, 255, 0.1); /* light blue color with transparency */
+  z-index: 0;
+}
+
+.container-shape::before {
+  width: 300px;
+  height: 300px;
+  top: -150px;
+  left: -150px;
+}
+
+.container-shape::after {
+  width: 400px;
+  height: 400px;
+  bottom: -200px;
+  right: -200px;
+}
+
 
 
 
