61. fix: add rtl layout

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,6 +86,14 @@
   .galaxy-gradient-half-bg {
     @apply transition-all duration-300 bg-gradient-to-br from-fuchsia-500/10 to-cyan-500/10
   }
+
+  .rtl {
+    direction: rtl;
+  }
+
+  .ltr {
+    direction: ltr;
+  }
 }
 
 
